--- a/package.json
+++ b/package.json
@@ -4,15 +4,29 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest",
+    "validate": "yarn test && yarn lint && tsc --noEmit",
+    "lint": "tslint -p tsconfig.json src/**/*.{ts,tsx}"
   },
   "dependencies": {
     "expo": "^31.0.2",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "typescript": "^3.2.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "@types/expo": "^31.0.6",
+    "@types/jest": "^23.3.11",
+    "@types/react": "^16.7.18",
+    "@types/react-native": "^0.57.24",
+    "@types/react-test-renderer": "^16.0.3",
+    "babel-preset-expo": "^5.0.0",
+    "jest": "^23.6.0",
+    "jest-expo": "^31.0.0",
+    "react-test-renderer": "^16.7.0",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.0"
   },
   "private": true
 }
