--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-paper": "^2.4.0",
     "typescript": "^3.2.2"
   },
   "devDependencies": {
