--- a/app.json
+++ b/app.json
@@ -1,15 +1,11 @@
 {
   "expo": {
-    "name": "TryFingerPrint",
-    "slug": "TryFingerPrint",
+    "name": "FingerprintAuthentication-Expo",
+    "slug": "fingerprint",
     "privacy": "public",
     "sdkVersion": "31.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
-    "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -19,9 +15,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     }
